# src/Api/RouterFactory.php
@@ -31,6 +31,7 @@ class RouterFactory
 			$v1->get('/ping', PingController::class . ':ping');
 			$v1->get('/stocks', StockAssetController::class . ':list');
 			$v1->post('/home/device/record', HomeDeviceRecordController::class . ':create');
+			$v1->get('/home/device/records', HomeDeviceRecordController::class . ':list');
 		});
 
 		$v1Group->add($this->requestValidationMiddleware);
